--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,6 +239,20 @@ Licencia para grupo de terceros---Gson  Copyright 2008 Google Inc.
     <string name="nombre_del_elemento">Nombre del elemento</string>
     <string name="anuncio">Anuncio!!!</string>
     <string name="ubicaci_n">Ubicación</string>
+    <string name="_10_4_2022">10/4/2022</string>
+    <string name="producto_x4_500">Producto x4 ------------------------ 500 $</string>
+    <string name="la_direccion_es_ave_52_37_y_39">La direccion es Ave 52//37 y 39</string>
+    <string name="_59134571">59134571</string>
+    <string name="_500">500 $</string>
+    <string name="_1_producto_x4_500_n_1_1_queso_n_1_2_mortadella">1. Producto x4 ------------------------ 500 $\n 1.1--------Queso\n 1.2--------Mortadella</string>
+    <string name="la_direccion_es_ave_52_37_y_39_delante_de_un_edificio_rojo_que_tiene_un_elefante_pintado">La direccion es Ave 52//37 y 39. Delante de un edificio rojo que tiene un elefante pintado</string>
+    <string name="date">Fecha:</string>
+    <string name="zona">Zona</string>
+    <string name="ya_en_casa">Ya En Casa</string>
+    <string name="adicionar_una_zona_nueva">Adicionar una zona nueva</string>
+    <string name="ciudad">Ciudad</string>
+    <string name="quitar_zona">Quitar zona</string>
+    <string name="nombre_de_la_zona">Nombre de la zona</string>
 
 
 </resources>
